--- a/lib/dune
+++ b/lib/dune
@@ -1,4 +1,11 @@
 (library
  (name        vlayout)
  (public_name vlayout)
+ (modules tools color image style pt bbox ctext commands backends vlayout)
  (libraries cairo2 gg))
+
+(library
+ (name        vlayout_encodings)
+ (public_name vlayout-encodings)
+ (modules vlayout_encodings)
+ (libraries vlayout data-encoding))
